# linux-automa

./: .gitignore  LICENCE  Makefile  README.md  meson.build
src/: log.c  log.h  main.c  watcher.c  watcher.h
systemd/user/: fileward.service
